# numdantic

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: all_tests.yml  coverage.yml  linting.yml  publish_release.yml  release_build.yaml  tests.yml
scripts/: compatible_dtypes.py
src/numdantic/: __init__.py  _numpy_types.py  _numpy_typing.py  _numpy_validation.py
tests/: conftest.py
tests/integration/: _numpy_salar_types.py  test_numpy_validation.py  test_type_checking_dtypes.py  test_type_checking_shapes.py  util.py
tests/unit/: test_numpy_types.py
