[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numdantic"
version = "0.1.1"
authors = [
  {name="Milan Staffehl"},
]
description = "Library for numpy typing support and numpy array validation with pydantic"
keywords = ["typing", "types", "numpy", "pydantic", "validation", "type hints", "type checking", "verification"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic >= 2.5.2, <= 3.0.0", "numpy"
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/MilanStaffehl/numdantic"
Issues = "https://github.com/MilanStaffehl/numdantic/issues"

# OPTIONAL DEPENDENCIES

[project.optional-dependencies]
dev = [
    "pre-commit",
    "commitizen",
    "flake8",
    "flake8-bugbear",
    "radon",
    "isort",
    "black",
    "mypy",
    "pytest",
    "pytest>=7.0",
    "pytest-mock>=3.11.1",
    "pytest-subtests>=0.12.0",
]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.11.1",
    "pytest-subtests>=0.12.0",
]
lint = [
    "flake8",
    "flake8-bugbear",
    "radon",
    "isort",
    "black",
    "mypy",
    "pytest",
    "pytest>=7.0",
    "pytest-mock>=3.11.1",
    "pytest-subtests>=0.12.0",
]

# TOOLS

[tool.black]
line-length = 79

[tool.isort]
src_paths = ["src/numdantic", "tests"]
known_first_party = ["numdantic"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.mypy]
python_version = "3.11"
strict = true
plugins = "numpy.typing.mypy_plugin"

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
version_files = ["pyproject.toml:version", "src/numdantic/__init__.py:__version__"]
update_changelog_on_bump = false
major_version_zero = true
